# kerf

./: .env.dev.example  .env.example  .env.main.example  .env.production.example  .env.z.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  conftest.py  decisions.md  eslint.config.js  fly.toml  fly.worker.toml  index.html  install.sh  kerf.example.toml  koyeb.yaml  package-lock.json  package.json  pyproject.toml  tasks.md  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
Formula/: kerf.rb
backend/: .dockerignore  .env.example  Dockerfile  README.md  config.py  dependencies.py  docker-compose.yml  go.mod  go.sum  main.py  requirements.txt  run.py
cloud/: README.md
deployment/: README.md  aws.md  digitalocean.md  fly.md  gcp.md  koyeb.md  s3.md  tigris.md
docs/: aerospace-overview.md  api-reference.md  architecture.md  assemblies.md  atopile-vs-tscircuit-deep.md  capabilities.md  cloud-features.md  cloud-operator.md  cloud.md  concepts.md  configuration.md  contributing.md  data-model.md  deployment.md  domain_depth.md  drawings.md  electronics.md  file-types.md  firmware-overview.md  getting-started.md  github-sync.md  imports.md  index.md  jewelry-workflow.md  license.md  llm-tools-catalogue.md  llm-tools.md  local-install.md  local-self-host.md  oss-cloud-separation.md  parametric.md  persona-bundles.md  plc-overview.md  plugins-development.md  privacy.md  sdk.md  terms.md  (+9 more)
kerf-chat/: pyproject.toml
kerf-chat/llm_docs/: part.md  pcb_drc.md
kerf-chat/src/kerf_chat/: plugin.py
(+1251 files in other folders)
