[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kerf-chat"
version = "0.1.0"
description = "Kerf chat plugin: LLM chat and tool dispatch"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "kerf-core>=0.1.0",
    "kerf-api>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.entry-points."kerf.plugins"]
kerf-chat = "kerf_chat.plugin:register"

[tool.hatch.build.targets.wheel]
packages = ["src/kerf_chat"]
include = ["llm_docs/**/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
